# alocals3

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  updates.md
alocals3/: __init__.py  app.py  client.py  db.py  gc.py  server.py  server_bin.py
alocals3/api/: deps.py
alocals3/api/routes/: buckets.py  objects.py
alocals3/core/: config.py  logging.py
alocals3/schemas/: storage.py
alocals3/storage/: base.py  local.py  rust.py
examples/: README.md  bench_consistency.py  bench_stress.py  benchmark_consistency.sh  benchmark_stress.sh  cache_304_demo.sh  client_flow.sh  start_server.sh
scripts/: README.md  build-linux-release.sh  build-macos-release.sh  build-windows-release.ps1
src/: lib.rs  python_lib.rs
