[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "alocals3"
version = "0.4.0"
description = "alocals3: a Rust S3-like server and Rust-backed Python client"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "alocals3 contributors" }
]
keywords = ["s3", "rust", "local"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
legacy-python-server = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.0",
  "eval-type-backport>=0.2.0; python_version<'3.10'",
]

[project.urls]
Homepage = "https://github.com/sxysxy/alocals3"
Repository = "https://github.com/sxysxy/alocals3"

[project.scripts]
alocals3-client = "alocals3.client:main"

[tool.maturin]
module-name = "alocals3._rust"
python-source = "."
features = ["extension-module"]
include = ["alocals3/**/*", "README.md", "README.zh-CN.md", "LICENSE"]
