[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "alocals3"
version = "0.5.0"
description = "alocals3: a Rust S3-like server and Rust-backed Python client"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "alocals3 contributors" }
]
keywords = ["s3", "rust", "local"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sxysxy/alocals3"
Repository = "https://github.com/sxysxy/alocals3"

[project.scripts]
alocals3-client = "alocals3.client:main"

[tool.maturin]
module-name = "alocals3._alocals3_native"
python-source = "."
features = ["extension-module"]
compatibility = "manylinux_2_28"
include = [
  "alocals3/__init__.py",
  "alocals3/client.py",
  "README.md",
  "README.zh-CN.md",
  "LICENSE",
]
exclude = [
  "alocals3/_alocals3_native*.so",
  "alocals3/_alocals3_native*.pyd",
  "alocals3/_alocals3_native*.dll",
  "alocals3/**/__pycache__/*",
  "alocals3/**/*.pyc",
]
